--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "purgecss-webpack-plugin": "^1.3.0",
     "tailwindcss": "^0.6.5"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/forsartis/vue-cli-plugin-tailwind"
+  },
   "keywords": [
     "vue",
     "cli",
