simplify badge, add logo

--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "vue-cli-plugin-tailwind",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "vue-cli plugin for Tailwind CSS",
   "author": "Jens Eggerstedt <j.eggerstedt@kaibatech.de>",
   "license": "MIT",
-  "dependencies": {
-    "@fullhuman/postcss-purgecss": "^1.1.0",
-    "tailwindcss": "^0.7.4"
-  },
+  "bugs": "https://github.com/forsartis/vue-cli-plugin-tailwind/issues",
+  "homepage": "https://github.com/forsartis/vue-cli-plugin-tailwind#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/forsartis/vue-cli-plugin-tailwind"
@@ -18,5 +16,12 @@
     "plugin",
     "tailwind",
     "purgecss"
-  ]
+  ],
+  "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.1.0",
+    "tailwindcss": "^0.7.4"
+  },
+  "peerDependencies": {
+    "@vue/cli-shared-utils": "^3.0.0"
+  }
 }
