prepare for tailwind 1.0.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-plugin-tailwind",
-  "version": "0.4.2",
+  "version": "1.0.0-beta.1",
   "description": "vue-cli plugin for Tailwind CSS",
   "author": "Jens Eggerstedt <j.eggerstedt@kaibatech.de>",
   "license": "MIT",
@@ -19,9 +19,6 @@
   ],
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.1.0",
-    "tailwindcss": "^0.7.4"
-  },
-  "peerDependencies": {
-    "@vue/cli-shared-utils": "^3.0.0"
+    "tailwindcss": "^1.0.0-beta.3"
   }
 }
