--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-plugin-tailwind",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "description": "vue-cli plugin for Tailwind CSS",
   "author": "Jens Eggerstedt <j.eggerstedt@kaibatech.de>",
   "license": "MIT",
@@ -19,6 +19,6 @@
   ],
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
-    "tailwindcss": "^1.0.0-beta.5"
+    "tailwindcss": "^1.0.0"
   }
 }
