fix to fulfill peerDependencies

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "purgecss"
   ],
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
     "postcss": "^7",
-    "tailwindcss": "2.0.1-compat"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   }
 }
